<resources>
    <string name="app_name">Image Note</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit">edit</string>
    <string name="title_activity_edit_photo">EditPhotoActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_show_other"> </string>
    <string name="btn_synchronize_note">synchronize note</string>
    <string name="btn_setting">settings</string>
    <string name="dialog_select_language">select language</string>
    <string name="dialog_language_english">English</string>
    <string name="dialog_language_chinese">中文</string>
    <string name="dialog_ocr_wait_title">Ocr</string>
    <string name="dialog_ocr_wait_content">workinging in background.....</string>
    <string name="dialog_select_save_type">select what to save</string>
    <string name="dialog_save_image">save image</string>
    <string name="dialog_save_text">save text</string>
    <string name="dialog_save_image_text">save image and text</string>
    <string name="edit_profile">edit profile</string>
    <string name="user_setting">User Setting</string>
    <string name="log_out">log out</string>
    <string name="other">other</string>
    <string name="license">licences</string>
    <string name="search_hint">input the note title or tags</string>
    <string name="delete_local_cloud_note">delete local cloud note</string>
    <string name="nav_settings">User page</string>
    <string name="user_page">user_page</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_setting">settingActivity</string>
    <string name="title_activity_license">LicenseActivity</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="load">loading</string>
    <string name="title_activity_edit_profile">edit_profile</string>

    <string name="nav_quitlogin">logout</string>
    <string name="nav_about">about</string>
    <string name="nav_setting">setting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_message_title">提示</string>
    <string name="dialog_message_success">成功</string>
    <string name="dialog_text_wait">请等待</string>
    <string name="dialog_error_title">错误</string>
    <string name="app_title">app_title</string>
    <string name="app_description">app_description</string>
</resources>
