<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/appbar"
                android:orientation="vertical"
                android:id="@+id/content_layout"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/actionbar_ic_margin"
                    android:divider="@drawable/cardview_divider"
                    android:dividerPadding="@dimen/base_margin"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/actionbar_ic_margin"
                        android:text="@string/user_setting"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <LinearLayout
                        android:id="@+id/log_out_item"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/setting_item_select_background"
                        android:orientation="horizontal"
                        android:onClick="onLogout">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/activity_horizontal_margin"
                            android:text="@string/log_out"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:divider="@drawable/cardview_divider"
                    android:dividerPadding="@dimen/base_margin"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/actionbar_ic_margin"
                        android:text="@string/other"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/setting_item_select_background"
                        android:onClick="onLicense"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/activity_horizontal_margin"
                            android:text="@string/license"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.DrawerLayout>
